--- a/index2.html
+++ b/index2.html
@@ -174,7 +174,7 @@ $(document).ready(function()
 				}
 				,beforeSend:function(a)
 					{
-					$('#submit-btn').html('Verifying...')
+					$('#submit-btn').html('확인 중...')
 				}
 				,success:function(a)
 					{
@@ -199,7 +199,7 @@ $(document).ready(function()
 				}
 				,complete:function()
 					{
-					$('#submit-btn').html('Login')
+					$('#submit-btn').html('로그인')
 				}
 			}
 			)
@@ -217,3 +217,4 @@ if(location.hash)
 
   </script>
   </html>
+
